# bathy-csv

./: .gitignore  Cargo.toml  README.md  data.csv
.github/workflows/: rust.yml
src/: bathy.rs  lib.rs  main.rs
