[package]
name = "bathy-csv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.75"
js-sys = "0.3"
web-sys = "0.3"